Download Receipt Feature
Updates: Download image, removed reports and vouchers

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   toggle_switch: ^2.3.0
   syncfusion_flutter_datepicker: ^25.1.42
   file_picker: ^8.0.3
+  url_launcher: ^6.0.9
 
 dev_dependencies:
   flutter_test:
