--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   syncfusion_flutter_datepicker: ^25.1.42
   file_picker: ^8.0.3
   url_launcher: ^6.0.9
+  shared_preferences: ^2.0.0
 
 dev_dependencies:
   flutter_test:
